-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8u40
-
Component/s: tools
FULL PRODUCT VERSION :
java version "1.8.0_51"
Java(TM) SE Runtime Environment (build 1.8.0_51-b16)
Java HotSpot(TM) Client VM (build 25.51-b03, mixed mode, sharing)
ADDITIONAL OS VERSION INFORMATION :
Microsoft Windows [Version 6.3.9600]
EXTRA RELEVANT SYSTEM CONFIGURATION :
Russian locale
A DESCRIPTION OF THE PROBLEM :
Windows JavaFx launcher (exe) crashes if passed non english command line arguments instead of passing it to application.
REGRESSION. Last worked in version 8u31
ADDITIONAL REGRESSION INFORMATION:
java version "1.8.0_31"
Java(TM) SE Runtime Environment (build 1.8.0_31-b13)
Java HotSpot(TM) Client VM (build 25.31-b07, mixed mode)
STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
1) Create empty JavaFx application (empty scene) and name it JavaFxApp).
2) Make native bundle.
3) Run cmd from bundle folder.
4) run launcher (not installer) with russian command arguments:
JavaFxApp.exe пример аргументов
EXPECTED VERSUS ACTUAL BEHAVIOR :
EXPECTED -
Application successfully started.
ACTUAL -
Error dialog with "Unknown exception" title and "OK" button appeared.
Then error dialog with "Failed to launch JVM" title appeared.
Application did not run properly.
ERROR MESSAGES/STACK TRACES THAT OCCUR :
Window with "Unknown exception" title and application name as text.
Window with "Failed to launch JVM" title and application name as text.
REPRODUCIBILITY :
This bug can be reproduced always.
java version "1.8.0_51"
Java(TM) SE Runtime Environment (build 1.8.0_51-b16)
Java HotSpot(TM) Client VM (build 25.51-b03, mixed mode, sharing)
ADDITIONAL OS VERSION INFORMATION :
Microsoft Windows [Version 6.3.9600]
EXTRA RELEVANT SYSTEM CONFIGURATION :
Russian locale
A DESCRIPTION OF THE PROBLEM :
Windows JavaFx launcher (exe) crashes if passed non english command line arguments instead of passing it to application.
REGRESSION. Last worked in version 8u31
ADDITIONAL REGRESSION INFORMATION:
java version "1.8.0_31"
Java(TM) SE Runtime Environment (build 1.8.0_31-b13)
Java HotSpot(TM) Client VM (build 25.31-b07, mixed mode)
STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
1) Create empty JavaFx application (empty scene) and name it JavaFxApp).
2) Make native bundle.
3) Run cmd from bundle folder.
4) run launcher (not installer) with russian command arguments:
JavaFxApp.exe пример аргументов
EXPECTED VERSUS ACTUAL BEHAVIOR :
EXPECTED -
Application successfully started.
ACTUAL -
Error dialog with "Unknown exception" title and "OK" button appeared.
Then error dialog with "Failed to launch JVM" title appeared.
Application did not run properly.
ERROR MESSAGES/STACK TRACES THAT OCCUR :
Window with "Unknown exception" title and application name as text.
Window with "Failed to launch JVM" title and application name as text.
REPRODUCIBILITY :
This bug can be reproduced always.
- duplicates
-
JDK-8160344 JavaFx application with maven build fails to support filename with Chinese characters
-
- Closed
-
- relates to
-
JDK-8138642 Generated bundle is not executable when main class contains unicode
-
- Closed
-