8133034: launcher crashes if started with non english arguments

Submitten-by: almatvee

Reviewed-by: herrick